                    Changes made to Pyjamas since 0.5p1
                    -----------------------------------

 * Added __getimtem__ to Exception

 * Fix for cache-busting in build process with different versions
   of python (use of md5 module), thanks to Oisin Mulvihill

 * Added support for reaching subscript js objects with python syntax

 * Added 'native' functions doc() and wnd() to reach $doc and $wnd

 * Added platform merge for simple class attribute assignments

 * Moved top-level option and track variable to safe variable $pyjs

 * Repaired pyv8 code 

 * Namespace safe module imports

 * Simplified import for pyjs

 * Added isinstance(s, str) and isinstance(s, int) support

 * Monster update to include Pyjamas-Desktop

 * Added imperfect support for local import/from-import

 * Added support for toplevel conditional import/from-import

 * Added name mapping to protect javascript reserved function methods 
   and reserved local variables (e.g. .name/.prototype, this/arguments)

 * Revised name (variable/class/function/...) lookup

 * Extended compile option support for commandline building and 
   compiling and for function / method decorators

 * Added __repr__() and toString() to list/tuple/dict

 * Disable source-tracking on Modload for better trace dumps

 * Use pyjslib.cmp() for <, <=, >, >= to enable type comparing (tuple/list/dict)

 * Performance improvement pyjslib.eq / pyjslib.cmp

 * Added support for iterable single argument in min()/max()

 * Circular imports permitted

 * Extended try-except support

 * Extended raise statement support

 * Added support for assigning instance methods to variables

 * Bugfix/performance enhancement method argument checking

 * Added Window.setOnError() and Window.onError()

 * Changed compiler flag -d behavior (wrap function calls in switch)

 * Added compiler flag --disable-store-source

 * Added compiler flag --disable-source-tracking

 * Modified debug and tracing
