@@ -20,6 +20,12 @@ class BuiltinTest(UnitTest):
 
     def testInt(self):
         self.assertEqual(int("5"), 5)
+        self.assertEqual(6, 6)
+        try:
+            int('not int')
+            self.fail("No int() argument error raised")
+        except ValueError, e:
+            self.assertEqual(e[0], "invalid literal for int() with base 10: 'not int'")
 
     def testOrdChr(self):
         for i in range(256):
