@@ -1,6 +1,8 @@
                     Changes made to Pyjamas since 0.5p1
                     -----------------------------------
 
+ * int() now raises ValueError
+
  * Added __getimtem__ to Exception
 
  * Fix for cache-busting in build process with different versions
